testing to connect with database

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=3001
-DBHOST='',
-DBUSER='',
-DBPASS='',
-DBNAME=''
+DBHOST='localhost',
+DBUSER='root',
+DBPASS='admin',
+DBNAME='academy_node'
