connection established with DB

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=3001
-DBHOST='localhost',
-DBUSER='root',
-DBPASS='admin',
-DBNAME='academy_node'
+DBHOST=localhost
+DBUSER=academy_user
+DBPASS=academy_user
+DBNAME=academy_node
